--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "classnames": "^2.2.6",
+    "immutable": "^4.0.0-rc.12",
+    "node-sass": "^4.14.1",
     "react": "^17.0.0",
+    "react-color": "^2.18.1",
     "react-dom": "^17.0.0",
     "react-scripts": "3.4.4"
   },
